--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -68,8 +68,14 @@ h1, h2, a, li {
 }
 
 textarea {
-    width: 50%;
+    width: 300px;
     height: 150px;
+}
+
+@media screen and (max-width: 350px) {
+    textarea {
+        width: 90%;
+    }
 }
 
 button, textarea {
