--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,15 +59,15 @@ div {
     border-color: var(--niceTeal);
 }
 
-header, #password-body, #footer {
-    width: 350px;
-}
-
 .wrapper {
+    width: 100%;
     max-width: 400px;
     padding: 0px;
     margin: 0px;
     border: 0px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 h1, h2, a, li {
@@ -77,17 +77,12 @@ h1, h2, a, li {
 }
 
 textarea {
-    width: 300px;
+    width: 90%;
+    max-width: 300px;
     height: 150px;
     background-color: rgba(255, 255, 255, 0.75);
     color: black;
     padding: 3px;
-}
-
-@media screen and (max-width: 400px) {
-    header, #password-body, #footer, textarea {
-        width: 90%;
-    }
 }
 
 button {
