--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,22 +36,14 @@ html {
 }
 
 body {
-    border-color: var(--blue);
-    margin: 6px;
-    border-radius: 12px;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
     display: flex;
     justify-content: center;
 }
 
 header {
-    border-color: var(--green);
-}
-
-section {
-    border-color: var(--teal);
-}
-
-footer {
     border-color: var(--green);
 }
 
@@ -62,12 +54,9 @@ div {
 .wrapper {
     width: 100%;
     max-width: 400px;
-    padding: 0px;
-    margin: 0px;
-    border: 0px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    margin: 6px;
+    border-color: var(--blue);
+    border-radius: 12px;
 }
 
 h1, h2, a, li {
@@ -81,12 +70,10 @@ textarea {
     max-width: 300px;
     height: 150px;
     background-color: rgba(255, 255, 255, 0.75);
-    color: black;
     padding: 3px;
 }
 
 button {
-    color: black;
     background-color: var(--cloudy);
     padding: 3px;
 }
@@ -97,6 +84,9 @@ button:hover {
 
 #password-body {
     margin: 0px 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 p, li, button, textarea {
