--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ div {
     max-width: 500px;
     margin: 6px;
     padding: 3px;
-    border: 1px solid var(--blue);
+    border: 1px solid rgb(0, 50, 91);
     border-radius: 12px;
 }
 
